update push swap

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -22,7 +22,8 @@ BSRCS	= ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c \
 			ft_lstmap.c
 BOBJS	= ${BSRCS:.c=.o}
 
-ESRCS	= get_next_line.c ft_abs.c ft_swap_int.c ft_isspace.c
+ESRCS	= get_next_line.c ft_abs.c ft_swap_int.c ft_isspace.c ft_atoll.c \
+			ft_isnbr.c
 EOBJS	= ${ESRCS:.c=.o}
 
 AR		= ar rcs
